[package]
name = "strangebrew_elsinore"
version = "0.1.0"
authors = ["dougedey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.4.4", features = [ "sqlite" ] }
dotenv = "0.15.0"
juniper = "0.14.2"
chrono = "0.4.11"
